<resources>
    <string name="app_name">Pocket Pall</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_activity2_main">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Name">Name</string>
    <string name="Owner">Owner</string>
    <string name="Category">Category</string>
    <string name="add_income">Add Income</string>
    <string name="Title">Title</string>
    <string name="Comment">Comment</string>
    <string name="Ammount">Amount</string>
    <string name="pickDate">Pick date</string>
    <string name="add_expense">Add Expense</string>
    <string name="Options">Options</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
</resources>
