 <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:scaleType="fitStart"
            android:text="@string/Options"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:textSize="@dimen/gmd_textsize" />

     <TextView
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:background="#1976D2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit"
            android:paddingTop="10dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:textStyle="bold"
            android:paddingBottom="10dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textSize="@dimen/md_textsize"
            android:textColor="@color/textGray"
            android:text="@string/Edit"/>

     <TextView
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:background="#1976D2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingStart="5dp"
            android:textStyle="bold"
            android:id="@+id/delete"
            android:paddingLeft="5dp"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/md_textsize"
            android:textColor="@color/textGray"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/Delete"/>
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:background="#1976D2" />

 </LinearLayout>
